--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
-Для корректной программы необходимо установить одну дополнительную библиотеку.
+Для корректной программы необходимо установить одну дополнительную библиотеку под названием inputimeout.
 В терминале IDE или в консоли нужно прописать команду pip install inputimeout
